# site_kitchen

./: Mod.py  README.md  cluster.py  data_analysis.py  db.sqlite3  example.py  flush_climb.bash  interpolation2.py  pip-log.txt  plot.py  read_csv.py  runserver.sh  temp_climb.json  temp_kitchen.json  vector.py
Modules/: '  CSV.py  XML.py  cluster.py  commandline.py  data_analysis.py  interpolation2.py  mv.py  mycsv.py  plot.py  test.xml
Modules/Sci/port/: CMakeLists.txt
Modules/Sci/port/include/: Fluids.hpp  decl.hpp  fluid.hpp  poly.hpp  prop.hpp  util.hpp
Modules/Sci/port/src/: Fluid.cpp  Fluids.cpp  Poly.cpp  Prop.cpp  util.cpp
Modules/Sci/port/test/: CMakeLists.txt
Modules/Sci/port/test/load/: CMakeLists.txt
Modules/Sci/port/test/load/src/: main.cpp
Modules/Sci/port/test/save/: CMakeLists.txt
Modules/Sci/port/test/save/src/: main.cpp
Sci/: fluid.py  grid_conv.py  grid_conv_gui.py  plot_fluent_line.py  plot_fluent_surface.py  plot_tec_line.py  process_interior.py  test.py
SunShot/: efficiency.py  efficiency_gui.py  efficiency_pyqt4.py  efficiency_w.py
backup/: backup1.json  temp.json
bank/: goog1.py
c_lang_parser/: test.hpp
climb/: models.py
cs271/: assign1.py
csv/: read.py
equations/: eq1.py  navier_stokes.py
goog1/: goog2.py
kitchen/: models.py  urls.py  views.py
lit/: urls.py
mysite/: __init__.py  graph.dot  settings.py  urls.py
oo_database/: Fluids.py  README.md  change_type.py  clear.py  gui.py  log  read.py  write_design.py  write_experiment_0.py  write_geo.py
orbit/: orbit.py
personal/: basic_anim.py  gui.py  (+1 more)
(+848 files in other folders)
